Fix navbar position when keyboard opens on mobile (#147)

--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,9 @@
   --active-color: #fdfdfe;
 }
 html, body, #app {
-  height: 100%;
+  height: var(--app-height, 100%);
   margin: 0;
-  overflow: hidden;/* 💡 важно — чтобы не прокручивалась вся страница */
+  overflow: hidden; /* 💡 важно — чтобы не прокручивалась вся страница */
 
 
 }
